@@ -1,3 +1,10 @@
+2004-03-23  Patrice Dumas  <dumas@centre-cired.fr> 
+
+	* Makefile.am, texi2html.spec: add a spec file usefull to build 
+	a rpm.
+	* doc/Makefile.am: install texi2html.html in $(datadir)/texinfo/html 
+	as discussed on the texinfo/automake mailing lists.
+
 2004-03-22  Patrice Dumas  <dumas@centre-cired.fr> 
 
 	* texi2html.pl: get language files before testing for language hash.
